# another_simple_task_tracker

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER_README.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: README.md  env.py
alembic/versions/: .gitkeep  001_initial_schema.py  002_add_initial_task_statuses.py
async_training/: async_demo.py  sync_demo.py  sync_fast_Api.py
docs/: code_review_main_py.md  connection_pool_explanation.md  dependency_injection_explanation.md  development_roadmap.md  domain_model.md  functional_specification.md  global_pool_explanation.md  lifespan_explanation.md  next_steps.md  parameter_types_comparison.md  project_structure_refactoring.md  pydantic_models_explanation.md  repository_design.md  requirements.md  update_functions_explanation.md  user_stories.md
domain/models/: task.py  time_log.py
examples/: integration_examples.md
rabbit/: consumer.py  producer.py
src/: config.py  database.py  dependencies.py  main.py
src/api/routers/: attachments.py  auth.py  tags.py  tasks.py  users.py
src/api/schemas/: attachment.py  auth.py  tags.py  task.py  user.py
src/application/: __init__.py
src/application/services/: __init__.py  task_service.py
src/database/: __init__.py  models.py  pool.py
src/domain/: __init__.py
src/domain/exceptions/: __init__.py  base.py  file_exceptions.py  permission_exceptions.py  task_exceptions.py  (+1 more)
src/sql/: database_creation.sql
test/: conftest.py  test_tasks_endpoints.py  test_users_endpoints.py
tests/: conftest.py  test_users_endpoints.py
(+23 files in other folders)
